tests/codegen/errors/reader/keyword-constructors/atom.reader.error.reader.keyword.constructor.mixing.positional/reader-keyword-constructor-mixing-positional.mon
;; TEST-ID: tests.codegen.reader-error.reader-keyword-constructor-mixing-positional
;; TEST-TIER: known-fail
;; TEST-STATUS: quarantined-baseline-2026-06-15
;; TEST-KNOWN-FAILURE: diagnostic-mismatch
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/keyword-constructors
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: Expected keyword in keyword constructor call 'Point'
;; TEST-ATOM: atom.reader.error.reader.keyword.constructor.mixing.positional
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.keyword.constructor.mixing.positional
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: Expected keyword in keyword constructor call 'Point'
;; TEST-READER-PATH: reader.c:6080 parser.keyword-constructor
;; TEST-CODEGEN-PATH: diagnostic.parser.keyword-constructor
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:6080 Expected keyword in keyword constructor call 'Point'
;; TEST-USES-ATOM: atom.reader.error.reader.keyword.constructor.mixing.positional
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.parser.keyword.constructor
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/keyword-constructors/atom.reader.error.reader.keyword.constructor.mixing.positional
;; TEST-MENU-PATH: codegen/errors/reader/keyword-constructors/atom.reader.error.reader.keyword.constructor.mixing.positional
;; TEST-ATOM-LEAF: atom.reader.error.reader.keyword.constructor.mixing.positional
;; TEST-CLI-TARGET: codegen errors reader keyword-constructors

(module Main)
(layout Point [x :: Int] [y :: Int])
(show (Point (:x 1) 2))
